Add smalloc/scalloc/srealloc/sreallocarray/sfree API

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,7 @@
 
 all:
-	gcc -Wall -O2 -o testapp testapp.c
+	gcc -shared -fPIC -DLINUX_VERSION_CODE=0x50489 -o libsecmem.so secmem.c
+	gcc -Wall -O2 -I. -L.  -o testapp testapp.c -lsecmem
 
 clean:
-	rm -rf testapp
+	rm -rf testapp libsecmem.so
